--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="googlebot" content="index, follow" />
   <meta name="google" content="notranslate" />
   <meta name="google-site-verification" content="1234567890" />
-  <link rel="icon" href="assets/images/hamza.png" type="image/png">
+  <link rel="icon" href="assets/hamza.png" type="image/png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700;800&family=Inter:wght@300;400;600&family=Titan+One&display=swap" rel="stylesheet" />
@@ -33,7 +33,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 </head>
-<body>
+<body class="scroll-smooth">
   <div class="cursor"></div>
   <div id="hero-root"></div>
   <div id="about-root"></div>
